--- a/index.html
+++ b/index.html
@@ -5,39 +5,37 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>repl.it</title>
-  <link href="../../../JS/bootcamp2020/miniCalculator/styles.css" rel="stylesheet" type="text/css" />
-  <script src="../../../JS/bootcamp2020/miniCalculator/script.js"></script>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <script src="script.js"></script>
 </head>
 
 <body>
   <div id="header">
     <div class="header">
-      <h1>Header</h1>
-      <p>My supercool header</p>
+      <h1>MINI CALCULATOR</h1>
     </div>
   </div>
-  <div>
-    <p>Number 1: </p>
-    <p>Number 2: </p>
-  </div>
-  <div id="app">
-    <input type="text" id="num1">
-
+  <p></p>  
+    <input type="text" id="num1" placeholder="Input Number">
     <select id="mode">
       <option value="+">+</option>
       <option value="-">-</option>
       <option value="*">*</option>
       <option value="/">/</option>
     </select>
-    
-    <input type="text" id="num2">
-
-    <button id="calculate" onclick="myFunction()">CALCULATE</button><br><br>
-
-    <button id="clean" onclick="cleanFunc()">RESET</button>
+    <input type="text" id="num2" placeholder="Input Number">
     <p id="output"></p>
+ 
 
+  <div id="buttons">
+    <button id="calculate" onclick="myFunction()">ENTER</button><br><br>
 
+    <button id="clean" onclick="cleanFunc()">RESET</button><br><br>
+  </div>
+  <div id="footer">
+    <div class="footer">
+      <p></p>>
+    </div>
   </div>
 </body>
 
